--- a/pipewire-airplay-toggle@craw0967.github.com/po/pipewire-airplay-toggle@craw0967.github.com.pot
+++ b/pipewire-airplay-toggle@craw0967.github.com/po/pipewire-airplay-toggle@craw0967.github.com.pot
@@ -1,82 +1,108 @@
-# Copyright (C) 2024
-# This file is distributed under the same license as the pipewire-airplay-toggle@craw0967.github.com package.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: pipewire-airplay-toggle@craw0967.github.com\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-30 20:24-0700\n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"POT-Creation-Date: 2025-10-02 12:56-0700\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: prefs.js:40
-msgid "Preferences"
-msgstr ""
-
-#: constants/config.js:3
+#: constants/config.js:10
 msgid "Music Note - Outline"
 msgstr ""
 
-#: constants/config.js:8
+#: constants/config.js:15
 msgid "Music Note - Solid"
 msgstr ""
 
-#: constants/config.js:13
+#: constants/config.js:20
 msgid "Waves & Screen"
 msgstr ""
 
-#: constants/config.js:18
+#: constants/config.js:25
 msgid "Wireless Speaker"
 msgstr ""
 
-#: constants/config.js:23
+#: constants/config.js:30
 msgid "Speaker"
 msgstr ""
 
-#: constants/config.js:31
+#: constants/config.js:38
+msgid "Preferences"
+msgstr ""
+
+#: constants/config.js:43
 msgid "Appearance"
 msgstr ""
 
-#: constants/config.js:38
+#: constants/config.js:50
 msgid "Indicator Icon"
 msgstr ""
 
-#: constants/config.js:39
-msgid "The icon to display on the Quick Settings button and the panel indicator"
+#: constants/config.js:51
+msgid ""
+"The icon to display on the Quick Settings button and the panel indicator"
 msgstr ""
 
-#: constants/config.js:47
+#: constants/config.js:59
 msgid "Show Indicator"
 msgstr ""
 
-#: constants/config.js:48
-msgid "Show a panel indicator when the RAOP Discover (AirPlay) module is enabled"
+#: constants/config.js:60
+msgid ""
+"Show a panel indicator when the RAOP Discover (AirPlay) module is enabled"
 msgstr ""
 
-#: constants/config.js:54
-msgid "Developer"
-msgstr ""
-
-#: constants/config.js:61
-msgid "Enable Debug Statements"
-msgstr ""
-
-#: constants/config.js:62
-msgid "Enable debug statements for this extension"
-msgstr ""
-
-#: constants/config.js:74
-msgid "AirPlay Speakers"
+#: constants/config.js:69
+msgid "PulseAudio Settings"
 msgstr ""
 
 #: constants/config.js:76
-msgid "Supported Audio Server and/or zeroconf package not found"
+msgid "Hide Duplicate Speakers"
 msgstr ""
 
 #: constants/config.js:77
-msgid "Please review and install either PipeWire and pipewire-zeroconf packages or PulseAudio and pulseaudio-zeroconf packages to use this extension. If you do not want to install these packages, you may wish to uninstall this extension."
+msgid ""
+"Remove duplicate speakers when PulseAudio loads more than one RAOP (AirPlay) "
+"sink. This may cause a very short, temporary UI freeze if there are a lot of "
+"duplicate speakers. Instead of removing duplicate speakers, duplicates may "
+"be prevented by using PipeWire instead of PulseAudio, by disabling IPv6 "
+"networking, or by disabling IPv6 in Avahi."
+msgstr ""
+
+#: constants/config.js:85
+msgid "Developer"
+msgstr ""
+
+#: constants/config.js:92
+msgid "Enable Debug Statements"
+msgstr ""
+
+#: constants/config.js:93
+msgid "Enable debug statements for this extension"
+msgstr ""
+
+#: constants/config.js:107
+msgid "AirPlay Speakers"
+msgstr ""
+
+#: constants/config.js:109
+msgid "Supported Audio Server and/or zeroconf package not found"
+msgstr ""
+
+#: constants/config.js:110
+msgid ""
+"Please review and install either PipeWire and pipewire-zeroconf packages or "
+"PulseAudio and pulseaudio-zeroconf packages to use this extension. If you do "
+"not want to install these packages, you may wish to uninstall this extension."
 msgstr ""
