--- a/pipewire-airplay-toggle@craw0967.github.com/po/pipewire-airplay-toggle@craw0967.github.com.pot
+++ b/pipewire-airplay-toggle@craw0967.github.com/po/pipewire-airplay-toggle@craw0967.github.com.pot
@@ -1,18 +1,17 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# pipewire-airplay-toggle Version 7
+# Copyright (C) 2024
+# This file is distributed under the same license as the pipewire-airplay-toggle package.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-02 12:56-0700\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Project-Id-Version: 7\n"
+"Report-Msgid-Bugs-To: craw0967.github@protonmail.com\n"
+"POT-Creation-Date: 2025-10-02 16:05-0700\n"
+"PO-Revision-Date: 2025-10-02 16:05-0700\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: en-us\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -51,7 +50,7 @@ msgstr ""
 
 #: constants/config.js:51
 msgid ""
-"The icon to display on the Quick Settings button and the panel indicator"
+"The icon to display on the Quick Settings button and the panel indicator."
 msgstr ""
 
 #: constants/config.js:59
@@ -60,7 +59,8 @@ msgstr ""
 
 #: constants/config.js:60
 msgid ""
-"Show a panel indicator when the RAOP Discover (AirPlay) module is enabled"
+"Enable to show a panel indicator when the RAOP Discover (AirPlay) module is "
+"enabled."
 msgstr ""
 
 #: constants/config.js:69
@@ -73,11 +73,10 @@ msgstr ""
 
 #: constants/config.js:77
 msgid ""
-"Remove duplicate speakers when PulseAudio loads more than one RAOP (AirPlay) "
-"sink. This may cause a very short, temporary UI freeze if there are a lot of "
-"duplicate speakers. Instead of removing duplicate speakers, duplicates may "
-"be prevented by using PipeWire instead of PulseAudio, by disabling IPv6 "
-"networking, or by disabling IPv6 in Avahi."
+"Enable to automatically remove duplicate AirPlay speakers when PulseAudio "
+"loads them more than once. (It may also be possible to prevent duplicate "
+"speakers by using PipeWire, by disabling IPv6 networking, or by disabling "
+"IPv6 in Avahi.)"
 msgstr ""
 
 #: constants/config.js:85
@@ -89,7 +88,7 @@ msgid "Enable Debug Statements"
 msgstr ""
 
 #: constants/config.js:93
-msgid "Enable debug statements for this extension"
+msgid "Enable debug statements for this extension."
 msgstr ""
 
 #: constants/config.js:107
@@ -97,12 +96,12 @@ msgid "AirPlay Speakers"
 msgstr ""
 
 #: constants/config.js:109
-msgid "Supported Audio Server and/or zeroconf package not found"
+msgid "Supported Audio Server and/or Modules Not Found"
 msgstr ""
 
 #: constants/config.js:110
 msgid ""
-"Please review and install either PipeWire and pipewire-zeroconf packages or "
-"PulseAudio and pulseaudio-zeroconf packages to use this extension. If you do "
-"not want to install these packages, you may wish to uninstall this extension."
+"Please review and install the required dependencies outlined in the "
+"'pipewire-airplay-toggle' extension's Installation Guide - https://"
+"github.com/craw0967/pipewire-airplay-toggle/wiki/Installation-Guide"
 msgstr ""
