Combined scripts and minor cleanup

--- a/pipewire-airplay-toggle@craw0967.github.com/po/pipewire-airplay-toggle@craw0967.github.com.pot
+++ b/pipewire-airplay-toggle@craw0967.github.com/po/pipewire-airplay-toggle@craw0967.github.com.pot
@@ -68,7 +68,7 @@ msgid "PulseAudio Settings"
 msgstr ""
 
 #: constants/config.js:76
-msgid "Hide Duplicate Speakers"
+msgid "Remove Duplicate Speakers"
 msgstr ""
 
 #: constants/config.js:77
